# splitty

./: Cargo.toml  LICENSE.TXT  README.md  changelog.txt  test_ff.bedpe
.github/workflows/: rust.yml
src/: libs.rs  workspace.code-workspace
src/lib/: common.rs  hts_lib_based.rs  noodles_based.rs
test/data/: cluster1.vcf  manual_ff_1.vcf  manual_fr_3.vcf  manual_rf_4.vcf  manual_rr_2.vcf
test/test_cluster/: chroms.txt  full_model.bedpe
test/test_fragment/: sim_adipose.hg19_subset_p.ff.bam
test/test_idFusionReads/: Sim1-R0P0_1_readsOnTCata_miniSA.bam  Sim1-R0P0_1_readsOnTCata_miniSP.bam
test/test_paired/: reads_aligned.bam  reads_aligned.bam.bai  single_paired_1.bam  single_paired_mm.bam  single_paired_sec.bam
test/vcf2fasta/: sim_adipose.hg19_subset_p.ff.vcf
test/vcf_cluster/: corner_case0.vcf  corner_case1.vcf  corner_case2.length  corner_case2.vcf  corner_case3.length  corner_case3.vcf  corner_case4.vcf  exceed_chrom.vcf  sample_lowMQfiltered_reads_mini.vcf  single.vcf  test_file.vcf
test/vcf_merge/: mini_IntAssemblyResult.vcf  mini_inSilicoIntegrations.vcf  mini_verify.vcf
test/vcf_subset/: all_bundled_dir.bedpe  all_bundled_unidir.bedpe  chroms.txt  cornercase_1.bedpe  ff_dir.bedpe  fr_dir.bedpe  manual_corncercase1.vcf  rf_dir.bedpe  rr_dir.bedpe  test.bedpe
test/vcf_subset/test1/: manual_ff_dir_2.vcf  manual_fr_uni_3.vcf  manual_fr_uni_3.vcfmanual_corncercase1.vcf  manual_rf_dir_4.vcf  manual_rr_dir_2.vcf
test/vcf_subset/test2/: manual_ff_dir_1.vcf  manual_fr_dir_3.vcf  manual_rf_dir_4.vcf  manual_rr_dir_2.vcf
