[package]
name    = "Splitty"
version = "0.8.5"
authors = ["Emanuel Schmid-Siegert <emanuel.schmid-siegert@selexis.com>"]
edition = "2018"
description   =  """
This suite contains multiple tools and libraries to identifies gene fusions from BAM files.
"""
readme  = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bambam = { git = "https://github.com/ebioman/bambam" }
rustc-hash = { version = "1.0", default-features = true }
rust-htslib = { version = "0.38.2", default-features = false }
regex = "1"
clap = "2.33.3"
csv = "1.1.6"
chrono = "0.4"
rayon = "1.5"
crossbeam ="0.8.1"
integer-sqrt="0.1.5"
statistical = "1.0.0"
noodles = { version = "0.6.0", features = ["bam","sam"] }
indexmap = "1.7.0"
linear-map = "1.2.0"
bio = "0.39.0"
tempfile = "3.3.0"
itertools = "0.10.3"
log = "0.4.17"
pretty_env_logger = "0.3"
human-sort = "0.2.2"

[[bin]]
name = "splitty"
path="src/bin/splitty.rs"

[[bin]]
name = "vcf_bnd_merge"
path="src/bin/vcf_bnd_merge.rs"

[[bin]]
name = "vcf_sv_cluster"
path="src/bin/vcf_bnd_cluster.rs"

[[bin]]
name = "vcf_sv_subset"
path="src/bin/vcf_bnd_subset.rs"

[[bin]]
name = "vcf_bnd_2fasta"
path="src/bin/vcf_bnd_2fasta.rs"

[[bin]]
name = "vcf_chromremoval"
path = "src/bin/vcf_chromremoval.rs"

[lib]
name = "genefusion"
path = "src/libs.rs"




